--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^4.16.1",
     "@types/jest": "^23.3.14",
     "@types/request": "^2.48.1",
+    "@types/ws": "^6.0.1",
     "husky": "^1.3.1",
     "jest": "^23.6.0",
     "nodemon": "^1.18.10",
@@ -36,7 +37,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "request": "^2.88.0",
-    "socket.io": "^2.2.0"
+    "ws": "^6.2.0"
   },
   "jest": {
     "preset": "ts-jest",
