--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:watch": "jest --watch",
     "format": "prettier --write src/**/*.ts test/**/*.ts",
     "style": "prettier --list-different src/**/*.ts test/**/*.ts",
-    "lint": "tslint src/**/*.ts"
+    "lint": "eslint src --ext .ts"
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
@@ -30,8 +30,10 @@
     "rimraf": "^2.6.3",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
-    "tslint": "^5.14.0",
-    "tslint-config-prettier": "^1.18.0",
+    "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
+    "eslint": "^5.12.0",
+    "eslint-config-prettier": "^4.1.0",
     "typescript": "^3.3.3333"
   },
   "dependencies": {
