--- a/package.json
+++ b/package.json
@@ -20,24 +20,26 @@
   },
   "devDependencies": {
     "@types/express": "^4.16.1",
-    "@types/jest": "^23.3.14",
+    "@types/jest": "^24.0.11",
+    "@types/joi": "^14.3.2",
     "@types/request": "^2.48.1",
     "@types/ws": "^6.0.1",
+    "@typescript-eslint/eslint-plugin": "^1.4.2",
+    "@typescript-eslint/parser": "^1.4.2",
+    "eslint": "^5.15.2",
+    "eslint-config-prettier": "^4.1.0",
     "husky": "^1.3.1",
-    "jest": "^23.6.0",
+    "jest": "^24.5.0",
     "nodemon": "^1.18.10",
     "prettier": "^1.16.4",
     "rimraf": "^2.6.3",
-    "ts-jest": "^23.10.5",
-    "ts-node": "^7.0.1",
-    "@typescript-eslint/eslint-plugin": "^1.4.2",
-    "@typescript-eslint/parser": "^1.4.2",
-    "eslint": "^5.12.0",
-    "eslint-config-prettier": "^4.1.0",
+    "ts-jest": "^24.0.0",
+    "ts-node": "^8.0.3",
     "typescript": "^3.3.3333"
   },
   "dependencies": {
     "express": "^4.16.4",
+    "joi": "^14.3.1",
     "request": "^2.88.0",
     "ws": "^6.2.0"
   },
