--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
   "dependencies": {
     "express": "^4.16.4",
     "joi": "^14.3.1",
+    "mysql": "^2.16.0",
+    "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
+    "typeorm": "^0.2.15",
     "ws": "^6.2.0"
   },
   "jest": {
