--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "lint": "eslint src --ext .ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.16.1",
     "@types/jest": "^24.0.11",
     "@types/joi": "^14.3.2",
+    "@types/nanoid": "^1.2.1",
     "@types/request": "^2.48.1",
     "@types/ws": "^6.0.1",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
@@ -38,9 +40,12 @@
     "typescript": "^3.3.3333"
   },
   "dependencies": {
+    "bcrypt": "^3.0.4",
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "mysql": "^2.16.0",
+    "nanoid": "^2.0.1",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
     "typeorm": "^0.2.15",
