--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "joi": "^14.3.1",
     "mysql": "^2.16.0",
     "nanoid": "^2.0.1",
+    "randanimal": "^1.0.4",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
     "typeorm": "^0.2.15",
