--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,8 @@
     "outDir": "build",
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "typeRoots": ["./node_modules/@types", "./typings"]
+    "experimentalDecorators": true
   },
+  "exclude": ["node_modules"],
   "include": ["src/**/*.ts"]
 }
