Move engine registration to Nest.js

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rimraf ./build",
     "prebuild": "npm run clean",
     "build": "tsc",
-    "start": "node --inspect=localhost:5858 --nolazy -r ts-node/register/transpile-only src/index.ts",
+    "start": "node --inspect=localhost:5858 --nolazy -r ts-node/register/transpile-only src/main.ts",
     "dev": "nodemon --watch",
     "test": "jest",
     "test:coverage": "jest --coverage",
@@ -40,15 +40,27 @@
     "typescript": "^3.4.2"
   },
   "dependencies": {
+    "@nestjs/common": "^6.0.0",
+    "@nestjs/core": "^6.0.0",
+    "@nestjs/passport": "^6.1.0",
+    "@nestjs/platform-express": "^6.0.0",
+    "@nestjs/platform-ws": "^6.3.2",
+    "@nestjs/typeorm": "^6.1.2",
+    "@nestjs/websockets": "^6.3.2",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.9.1",
     "express": "^4.16.4",
     "joi": "^14.3.1",
     "mysql": "^2.16.0",
     "nanoid": "^2.0.1",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1",
     "randanimal": "^1.0.4",
     "reflect-metadata": "^0.1.13",
     "request": "^2.88.0",
+    "rxjs": "^6.3.3",
     "typeorm": "^0.2.15",
     "ws": "^6.2.0"
   },
