--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "outDir": "build",
     "strict": true,
     "esModuleInterop": true,
+    "incremental": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
