Fix wrong target

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Build
         uses: actions/docker/cli@8cdf801b322af5f369e00d85e9cf3a7122f49108
         with:
-          args: build --target dev -t co0sh/hexagon-server:dev .
+          args: build --target build -t co0sh/hexagon-server:dev .
       - name: Test
         uses: actions/docker/cli@8cdf801b322af5f369e00d85e9cf3a7122f49108
         with:
