--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,44 +1,51 @@
-name: CI
-on:
-  push:
-    branches:
-      - master
-
+name: CI/CD
+on: push
 jobs:
-  build:
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    env:
+      CI: true
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+      - name: Setup
+        uses: actions/setup-node@v1
+        with:
+          node-version: '10.x'
+      - name: Cache
+        uses: actions/cache@preview
+        id: cache
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      - name: Install
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm ci
+      - name: Test
+        run: npm run test
+      - name: Lint
+        run: npm run lint
+      - name: Style
+        run: npm run style
+  deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    needs: test
+    if: github.ref == 'refs/heads/master'
     steps:
-      - uses: actions/checkout@master
+      - name: Checkout
+        uses: actions/checkout@v1
+        with:
+          lfs: true
       - name: Build
-        uses: actions/docker/cli@8cdf801b322af5f369e00d85e9cf3a7122f49108
+        run: docker build -t co0sh/hexagon-server:latest .
+      - name: Publish
+        uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          args: build --target build -t co0sh/hexagon-server:dev .
-      - name: Test
-        uses: actions/docker/cli@8cdf801b322af5f369e00d85e9cf3a7122f49108
-        with:
-          args: run --rm co0sh/hexagon-server:dev npm run test
-      - name: Lint
-        uses: actions/docker/cli@8cdf801b322af5f369e00d85e9cf3a7122f49108
-        with:
-          args: run --rm co0sh/hexagon-server:dev npm run lint
-      - name: Style
-        uses: actions/docker/cli@8cdf801b322af5f369e00d85e9cf3a7122f49108
-        with:
-          args: run --rm co0sh/hexagon-server:dev npm run style
-      - name: Login
-        uses: actions/docker/login@8cdf801b322af5f369e00d85e9cf3a7122f49108
-        env:
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      - name: Release
-        uses: actions/docker/cli@8cdf801b322af5f369e00d85e9cf3a7122f49108
-        with:
-          args: build -t co0sh/hexagon-server:latest .
-      - name: Push
-        uses: actions/docker/cli@8cdf801b322af5f369e00d85e9cf3a7122f49108
-        with:
-          args: push co0sh/hexagon-server:latest
+          name: co0sh/hexagon-server:latest
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Deploy
         uses: maddox/actions/ssh@master
         env:
