--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^24.0.11",
     "@types/joi": "^14.3.2",
     "@types/nanoid": "^1.2.1",
+    "@types/passport-http-bearer": "^1.0.33",
     "@types/request": "^2.48.1",
     "@types/ws": "^6.0.1",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
